[metadata]
name = memtap
version = 1.0.0
author = Kraus17th
author_email = 
description = Utility for dumping all data from memcached instances
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kraus17th/memtap
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: System :: Networking
    Topic :: Security
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
keywords = memcached, dump, cache, security, pentesting
project_urls =
    Homepage = https://github.com/Kraus17th/memtap
    Repository = https://github.com/Kraus17th/memtap
    Issues = https://github.com/Kraus17th/memtap/issues

[options]
python_requires = >=3.6
install_requires =
    pysocks>=1.7.1
    tqdm>=4.67.0
py_modules = memtap
zip_safe = False

[options.entry_points]
console_scripts =
    memtap = memtap:main

[options.package_data]
* = *.txt, *.md

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    venv,
    .venv

[isort]
profile = black
line_length = 120

